--- a/FrontEnd/agendacar/package.json
+++ b/FrontEnd/agendacar/package.json
@@ -14,6 +14,7 @@
     "material-ui": "^0.20.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
     "react-toastify": "^6.0.8",
