enviamento de email feito

--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -5,5 +5,13 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+    "SmtpSettings": {
+      "Server": "smtp.gmail.com",
+      "Port":587,
+      "SenderName": "AgendaCar",
+      "SenderEmail": "teste0123401234@gmail.com",
+      "Username": "teste0123401234@gmail.com",
+      "Password": "T!este123"
   }
 }
