--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -6,5 +6,13 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SmtpSettings": {
+    "Server": "smtp.gmail.com",
+    "Port":587,
+    "SenderName": "AgendaCar",
+    "SenderEmail": "teste0123401234@gmail.com",
+    "Username": "teste0123401234@gmail.com",
+    "Password": "T!este123"
+  }
 }
