--- a/BackEnd/BackEnd.csproj
+++ b/BackEnd/BackEnd.csproj
@@ -8,10 +8,11 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.8"/>
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3"/>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.8"/>
+    <PackageReference Include="MailKit" Version="2.9.0"/>
   </ItemGroup>
   <ItemGroup>
-  <Content Include="Storage/Fotos/*">
-   <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-  </Content>
+    <Content Include="Storage/Fotos/*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 </Project>
