ContaineroLogado e ContainerTotalDeslogado criados

--- a/BackEnd/appsettings.Development.json
+++ b/BackEnd/appsettings.Development.json
@@ -12,6 +12,6 @@
       "SenderName": "AgendaCar",
       "SenderEmail": "teste0123401234@gmail.com",
       "Username": "teste0123401234@gmail.com",
-      "Password": "T!este123"
+      "Password": "MinhaSenha123"
   }
 }
