--- a/BackEnd/appsettings.json
+++ b/BackEnd/appsettings.json
@@ -13,6 +13,6 @@
     "SenderName": "AgendaCar",
     "SenderEmail": "teste0123401234@gmail.com",
     "Username": "teste0123401234@gmail.com",
-    "Password": "T!este123"
+    "Password": "MinhaSenha123"
   }
 }
